--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       #map { position: fixed; top: 0; bottom: 0; width: 60%;}
       img { max-width: 100%; height: auto; padding: 3px; border: 1px solid #a2abb4;
          }
-    
+     iframe {
+      max-width: 100%;
+      height: auto;
+      } 
     </style>
      
   </head>
