--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
      iframe {
       max-width: 100%;
       } 
+      @media (max-width: 800px) {
+         #map {  width: 50%;}
+      }
     </style>
      
   </head>
@@ -64,7 +67,6 @@
         opacity: 0;
       }
 
-      @media (max-width: 800px) {
         iframe {
       max-width: 100%;
       height: auto;
@@ -78,7 +80,7 @@
         width: 50%;
         margin-left: 50%; 
       }
-      }
+      
     </style>
 
     <div id='map'></div> 
