--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
      iframe {
       max-width: 100%;
       } 
-      @media (max-width: 800px) {
-         #map {  width: 50%;}
-      }
     </style>
      
   </head>
@@ -66,7 +63,7 @@
       .fin {
         opacity: 0;
       }
-
+      @media (max-width: 800px)
         iframe {
       max-width: 100%;
       height: auto;
