--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       .fin {
         opacity: 0;
       }
-      @media (max-width: 800px)
+      @media (max-width: 800px) {
         iframe {
       max-width: 100%;
       height: auto;
