--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
      iframe {
       max-width: 100%;
       } 
+       @media (max-width: 800px) {
+         #map {  width: 50%;}
+      }
     </style>
      
   </head>
