--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
       #map { position: fixed; top: 0; bottom: 0; width: 60%;}
       img { max-width: 100%; height: auto; padding: 3px; border: 1px solid #a2abb4;
          }
-     iframe {
-      max-width: 100%;
-      } 
-       @media (max-width: 800px) {
-         #map {  width: 50%;}
-      }
     </style>
      
   </head>
@@ -68,6 +62,7 @@
       }
       @media (max-width: 800px) {
         iframe {
+      width: 100%;
       max-width: 100%;
       height: auto;
       } 
