--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       #map { position: fixed; top: 0; bottom: 0; width: 60%;}
       img { max-width: 100%; height: auto; padding: 3px; border: 1px solid #a2abb4;
          }
+       iframe {
+        width: 100%;       
+      }
     </style>
      
   </head>
@@ -62,7 +65,6 @@
       }
       @media (max-width: 800px) {
         iframe {
-      width: 100%;
       max-width: 100%;
       height: auto;
       } 
