--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
     <style>
       body { margin: 0; padding: 0; }
-      #map { position: fixed; top: 0; bottom: 0; width: 80%;}
+      #map { position: fixed; top: 0; bottom: 0; width: 60%;}
       img { max-width: 100%; height: auto; padding: 3px; border: 1px solid #a2abb4;
          }
        iframe {
@@ -99,7 +99,7 @@
     <section id="taksim">
         <h3>Taksim Meydanı</h3>
         <img src="http://uploads.knightlab.com/storymapjs/93573c32cfef3f6424c2a01e1fbc4c2f/beyoglu/_images/nakiye elgun.jpg"/>
-        
+      <i>Taksim Meydanı</br></i>
       </section>
 
     <section id="esayan">
