--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
     <section id="esayan">
         <h3>Esayan Okulu</h3>
         <img src="http://uploads.knightlab.com/storymapjs/93573c32cfef3f6424c2a01e1fbc4c2f/beyoglu/_images/esayan okulu.jpg"/>
-        <p> Mıgırdiç ve Hovannes Esayan kardeşlerin bağışıyla inşa edilen Esayan Okulu, 
+        <i><small>Esayan Okulu</small></i>
+      <p> Mıgırdiç ve Hovannes Esayan kardeşlerin bağışıyla inşa edilen <b>Esayan Okulu</b>, 
           1895 yılında karma eğitimle öğretime başladı. <br/></p>
       </section>
           
